--- a/style.css
+++ b/style.css
@@ -1257,7 +1257,7 @@ form textarea {
         /* width: 16.6667%; */
           display: block;
   width: 100%;
-  padding: 20px;
+  /* padding: 20px; */
   text-align: center;
   margin-bottom: 20px;
         float: left; } }
